css/nurd.less
@blue-gradient: -webkit-linear-gradient(top, #6db3f2 0%,#54a3ee 50%,#3690f0 51%,#1e69de 100%);
@green-gradient: -webkit-linear-gradient(top, #9dd53a 0%,#a1d54f 50%,#80c217 51%,#7cbc0a 100%);
@red-gradient: -webkit-linear-gradient(top, #f85032 0%,#f16f5c 50%,#f6290c 51%,#f02f17 71%,#e73827 100%);
@blue-highlight: -webkit-linear-gradient(top, #f2f7f9 0%,#def0f9 50%,#d7e8ef 51%,#c0e2f9 100%);

@sky-gradient: -webkit-linear-gradient(top, #2987E6 0%,#72D0ED 100%);

@card-width: 128px;
.card-object-size(@card-width) {
    width: 30*(@card-width/128);
    height: 30*(@card-width/128);
    background-image: url(/images/shapes.png);
    background-size: (572/2*(@card-width/128)) (188/2*(@card-width/128));
    background-repeat: no-repeat;
}

.card-object-mask-position-y(@shading, @card-width) {
    -webkit-mask-position-y: 32 * -@shading;
}
.card-object-mask-position-x(@shape, @card-width) {
    -webkit-mask-position-x: 32 * -@shape;
}

.card-object-background-position-y(@shading, @card-width) {
    background-position-y: 32 * -@shading * (@card-width/128);
}
.card-object-background-position-x(@color, @shape, @card-width) {
    background-position-x: 32 * (-3*@color - @shape) * (@card-width/128);
}

/* reset CSS: from http://meyerweb.com/eric/thoughts/2007/05/01/reset-reloaded/ */
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td { margin: 0; padding: 0; border: 0; outline: 0; font-weight: inherit; font-style: inherit; font-size: 100%; font-family: inherit; vertical-align: baseline; }
/* remember to define focus styles! */
:focus { outline: 0; }
body { line-height: 1; color: black; background: white; }
ol, ul { list-style: none; }
/* tables still need 'cellspacing="0"' in the markup */
table { border-collapse: separate; border-spacing: 0; }
caption, th, td { text-align: left; font-weight: normal; }
blockquote:before, blockquote:after, q:before, q:after { content: ""; }
blockquote, q { quotes: "" ""; }
/* end reset CSS */

/* main.css */

body { background: rgb(191,234,244); }
.outer-container { margin: 0 auto; width: 1024px; }
#game-container { overflow:auto; position: relative; }
#tmp { display: none; }

/* game controls */
button { background: #e2e2e2; border: none; border-radius: 5px; cursor: pointer; padding: 4px 12px;
    background: -webkit-linear-gradient(top, #e2e2e2 0%,#dbdbdb 50%,#d1d1d1 51%,#fefefe 100%); }
#restart-game-btn.selected { background: @blue-highlight; }
#draw-cards-btn.selected { background: @blue-highlight; }
#end-game-btn.selected { background: @blue-highlight; }

/* game elements */
.card-container .json { display:none; }
.card-container .card-img {display:none;}

.card(@card-width) {
    border-radius: @card-width * 0.08; box-shadow: 6px 8px 30px #1C94C7; height:@card-width * 0.40; padding-top: @card-width * 0.10; text-align: center; width: @card-width;
    background: -webkit-linear-gradient(top, #ffffff 0%,#f3f3f3 50%,#ededed 51%,#ffffff 100%);
    .card-object { display: inline-block; margin:1px; .card-object-size(@card-width); }
    .card-object {
        &.color0.shape0 { .card-object-background-position-x(0, 0, @card-width); }
        &.color0.shape1 { .card-object-background-position-x(0, 1, @card-width); }
        &.color0.shape2 { .card-object-background-position-x(0, 2, @card-width); }
        &.color1.shape0 { .card-object-background-position-x(1, 0, @card-width); }
        &.color1.shape1 { .card-object-background-position-x(1, 1, @card-width); }
        &.color1.shape2 { .card-object-background-position-x(1, 2, @card-width); }
        &.color2.shape0 { .card-object-background-position-x(2, 0, @card-width); }
        &.color2.shape1 { .card-object-background-position-x(2, 1, @card-width); }
        &.color2.shape2 { .card-object-background-position-x(2, 2, @card-width); }
        &.shading1 { .card-object-background-position-y(1, @card-width); }
        &.shading0 { .card-object-background-position-y(0, @card-width); }
        &.shading2 { .card-object-background-position-y(2, @card-width);  }
    }
}

.card {
    .card(@card-width);
}

.cards-in-play { background: url(/images/board.png); background-size: 100% 100%; border-radius: 12px; height: 398px; margin: 0 auto; overflow:hidden; padding:57px 43px 6px 53px; width:420px; }
.cards-in-play .card { float:left; margin:2px; overflow:hidden; }
.cards-in-play .card:hover { /*background: -webkit-linear-gradient(top, #fcf2b8 0%,#fce24e 50%,#f9d400 51%,#f7ed91 100%);*/ }
.cards-in-play .card.selected { background: @blue-highlight }
.cards-in-play .card.number0 .card-object { }
.cards-in-play .card.number1 .card-object { }
.cards-in-play .card.number2 .card-object { }

.players { float:left; margin-left: 22px; margin-top: 12px; }
.players .player:first-of-type { -webkit-border-top-left-radius: 5px; -webkit-border-top-right-radius: 5px; }
.players .player:last-of-type { -webkit-border-bottom-left-radius: 5px; -webkit-border-bottom-right-radius: 5px; }
.players .player { border-bottom:1px dotted #C8C8C8; display:block; padding:2px 12px;
    background: -webkit-linear-gradient(top, #fcfff4 0%,#dfe5d7 40%,#b3bead 100%); }
.players .player .field-name { font-family:Arial; font-size:0.75em; }
.players .player .field-value {}
.players .player .name { display:inline-block; font-size:1.1em; margin-right:22px; width:140px; }
.players .player .score,
.players .player .num-sets,
.players .player .num-false-sets { background:#e8e8e8; display:inline-block; font-family:Arial; font-size:1em; height:17px; margin:0 5px; padding:5px; text-align:right; width:30px; }

.balloons { height: 500px; position: absolute; right: 12px; top: 12px; width: 220px;
    .balloon {
        bottom: 0; position: absolute;
        -moz-transition: bottom 1s ease-in-out; -webkit-transition: bottom 1s ease-in-out;
        .background { background: url(/images/balloons.png); height: 59px; margin: 0 auto; width: 53px; }
        .name { background: rgba(232, 247, 255, 0.8); border: solid 2px #73858C; font-family: Arial; font-size: 14px; padding: 2px 4px; position: relative; text-align: center; top: -2px; }
        &[color="0"] { left: 0; .background { background-position: -1px 0; } }
        &[color="1"] { left: 55px; .background { background-position: -55px 0; } }
        &[color="2"] { left: 110px; .background { background-position: -109px 0; } }
        &[color="3"] { left: 11px; .background { background-position: -163px 0; } }
        &[color="4"] { left: 66px; .background { background-position: -217px 0; } }
        &[color="5"] { left: 121px; .background { background-position: -1px -61px; } }
        &[color="6"] { left: 22px;.background { background-position: -55px -61px; } }
        &[color="7"] { left: 77px;.background { background-position: -109px -61px; } }
        &[color="8"] { left: 132px;.background { background-position: -163px -61px; } }
        &[color="9"] { left: 33px;.background { background-position: -217px -61px; } }
        &[color="10"] { left: 88px;.background { background-position: -1px -122px; } }
        &[color="11"] { left: 143px;.background { background-position: -55px -122px; } }
        &[color="12"] { left: 44px;.background { background-position: -109px -122px; } }
        &[color="13"] { left: 99px;.background { background-position: -163px -122px; } }
        &[color="14"] { left: 154px;.background { background-position: -217px -122px; } }
    }
}

.game-end-overlay-container { height: 0; left: 0; position: fixed; top: 0; text-align: center; width: 100%; }
.game-end-overlay { background: #fcfff4; font-family: Verdana; margin: 48px auto 0; padding: 22px 38px; width: 500px;
    background: -webkit-linear-gradient(top, #fcfff4 0%,#dfe5d7 40%,#b3bead 100%); }
.game-end-overlay .name { }
.game-end-overlay .score { }
.game-end-overlay .winners {  }
.game-end-overlay .winners .winner { margin-top: 6px; }
.game-end-overlay .champion { font-size: 1.6em; margin: 0 auto; }
.game-end-overlay .runner-up { font-size: 1.2em; }
.game-end-overlay .runner-up.first { }
.game-end-overlay .runner-up.second { }
.game-end-overlay .close { margin-top: 22px; }

#name-change-form { float: left; margin-left: 22px; }
#name-field { padding: 4px; width: 178px; }

.game-controls {  }

#chat {
    font-family: arial; margin:0 auto; padding: 12px 24px ; width: 600px;
    .chat-form {
        label { font-weight: bold; }
        .msg { background: transparent; border: 0; font-size: 16px; padding: 4px; width:350px; }
    }
    .chat-msgs {
        height: 570px;
        .chat-msg {
            margin:5px 0 0;
            .sender { background:#E1F3F7; border-radius:3px; display:inline-block; margin:0 7px 0 0; padding:4px 5px; }
            .msg { display:inline-block;
                .cards { display:inline-block;
                    .card { border: solid 3px; }
                    &.set { .card { border-color:#d2ff52 #4FED44 #4FED44 #d2ff52; } }
                    &.false-set { .card { border-color:#FFA435 #e73827 #e73827 #FFA435; } }
                }
            }
        }
    }
}
#chat .chat-msgs .chat-msg .msg .cards .card { display:inline-block; .card(64px); }

@import url(/css/animations.css);
.sky { background: @sky-gradient; height: 500px; left: 0; position: absolute; top: 0; width: 100%; z-index: -1; }
.moon { background: url(/images/moon.png) repeat-x 0 0; background-size: 100% 100%; top: 50px; height: 70px; right: 180px; position: absolute; width: 70px; z-index: -1; }
.cloud-1 {
    background: url(/images/cloud-1.png) repeat-x 0 0; top: 287px; height: 430px; left: 0; position: absolute; width: 100%; z-index: -1;
	-webkit-animation: cloud1 280s infinite normal;
    -webkit-animation-timing-function: linear;
}
.cloud-2 {
    background: url(/images/cloud-2.png) repeat-x 0 0; top: 336px; height: 381px; left: 0; position: absolute; width: 100%; z-index: -1;
    -webkit-animation: cloud2 240s infinite normal;
    -webkit-animation-timing-function: linear;
}
.cloud-3 {
    background: url(/images/cloud-3.png) repeat-x 0 0; top: 382px; height: 335px; left: 0; position: absolute; width: 100%; z-index: -1;
    -webkit-animation: cloud3 200s infinite normal;
    -webkit-animation-timing-function: linear;
}

